Fix title jump

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -607,29 +607,12 @@ p:last-child {
   }
 }
 
-nav a {
-  display: inline-block;
-  border-bottom-width: 1.5px;
-  --tw-border-opacity: 1;
-  border-color: rgb(64 64 64 / var(--tw-border-opacity, 1));
-}
-
-nav a:hover {
-  --tw-border-opacity: 1;
-  border-color: rgb(115 115 115 / var(--tw-border-opacity, 1));
-}
-
-nav a {
-  box-decoration-break: clone;
-  -webkit-box-decoration-break: clone;
-  display: inline-block;
-}
-
 .text-link {
   display: inline-block;
   border-bottom-width: 1.5px;
   --tw-border-opacity: 1;
   border-color: rgb(64 64 64 / var(--tw-border-opacity, 1));
+  line-height: 1.6;
 }
 
 .text-link:hover {
@@ -640,6 +623,38 @@ nav a {
 .text-link {
   box-decoration-break: clone;
   -webkit-box-decoration-break: clone;
+}
+
+.nav-link {
+  display: inline-block;
+  border-bottom-width: 1.5px;
+  --tw-border-opacity: 1;
+  border-color: rgb(64 64 64 / var(--tw-border-opacity, 1));
+  line-height: 1.6;
+}
+
+.nav-link:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(115 115 115 / var(--tw-border-opacity, 1));
+}
+
+.nav-link {
+  box-decoration-break: clone;
+  -webkit-box-decoration-break: clone;
+  font-size: 1.875rem;
+  line-height: 1.6;
+}
+
+@media (min-width: 768px) {
+  .nav-link {
+    font-size: 17px;
+  }
+
+  @media (min-width: 768px) {
+    .nav-link {
+      font-size: 20px;
+    }
+  }
 }
 
 .title-mono {
@@ -823,10 +838,6 @@ nav a {
 
 .fixed {
   position: fixed;
-}
-
-.relative {
-  position: relative;
 }
 
 .inset-x-0 {
@@ -1061,10 +1072,6 @@ nav a {
   white-space: nowrap;
 }
 
-.border-b-2 {
-  border-bottom-width: 2px;
-}
-
 .border-b-\[1\.5px\] {
   border-bottom-width: 1.5px;
 }
@@ -1182,11 +1189,6 @@ nav a {
 
 .font-mono {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-}
-
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
 }
 
 .text-base {
@@ -1373,15 +1375,5 @@ nav a {
 
   .md\:pt-7 {
     padding-top: 1.75rem;
-  }
-
-  .md\:text-base {
-    font-size: 17px;
-  }
-
-  @media (min-width: 768px) {
-    .md\:text-base {
-      font-size: 20px;
-    }
   }
 } 
